[gd_scene load_steps=7 format=2]

[ext_resource path="res://elements/JackIn.tscn" type="PackedScene" id=1]
[ext_resource path="res://elements/gates/ORGate.gd" type="Script" id=2]
[ext_resource path="res://elements/ModuleDragger.tscn" type="PackedScene" id=3]
[ext_resource path="res://elements/gates/orgate_2.svg" type="Texture" id=4]
[ext_resource path="res://elements/switch/Switch.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 220, 138 )

[node name="ORGate" type="Node2D"]
script = ExtResource( 2 )

[node name="sequencer" type="Sprite" parent="."]
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 4 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="ModuleDragger" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ModuleDragger"]
position = Vector2( 210, 140 )
shape = SubResource( 1 )

[node name="JackIn" parent="." instance=ExtResource( 1 )]
position = Vector2( 2, 35 )

[node name="JackIn2" parent="." instance=ExtResource( 1 )]
position = Vector2( 2, 105 )

[node name="JackIn3" parent="." instance=ExtResource( 1 )]
position = Vector2( 2, 175 )

[node name="JackIn4" parent="." instance=ExtResource( 1 )]
position = Vector2( 2, 245 )

[node name="JackOut" parent="." instance=ExtResource( 1 )]
position = Vector2( 418, 35 )
rotation = 3.14159
is_input = false

[node name="JackOut2" parent="." instance=ExtResource( 1 )]
position = Vector2( 418, 105 )
rotation = 3.14159
is_input = false

[node name="JackOut3" parent="." instance=ExtResource( 1 )]
position = Vector2( 418, 175 )
rotation = 3.14159
is_input = false

[node name="JackOut4" parent="." instance=ExtResource( 1 )]
position = Vector2( 418, 245 )
rotation = 3.14159
is_input = false

[node name="Switch" parent="." instance=ExtResource( 5 )]
position = Vector2( 103, 35 )
rotation = 1.5708

[node name="Switch2" parent="." instance=ExtResource( 5 )]
position = Vector2( 103, 105 )
rotation = 1.5708

[node name="Switch3" parent="." instance=ExtResource( 5 )]
position = Vector2( 103, 175 )
rotation = 1.5708

[node name="Switch4" parent="." instance=ExtResource( 5 )]
position = Vector2( 103, 245 )
rotation = 1.5708
